--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,18 @@
+# General settings
 lsi: false
 safe: true
-source: [docs]
 incremental: false
+
+# Specify the source directory for Jekyll
+source: docs
+
+# Syntax highlighting and markdown settings
 highlighter: rouge
-gist:
-  noscript: false
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
+
+# Theme and plugin settings
 remote_theme: pages-themes/architect@v0.2.0
 plugins:
-- jekyll-remote-theme
+  - jekyll-remote-theme
