--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,6 @@ kramdown:
   syntax_highlighter: rouge
 
 # Theme and plugin settings
-remote_theme: cvless
+remote_theme: pages-themes/cayman
 plugins:
   - jekyll-remote-theme
