--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,9 @@ kramdown:
 remote_theme: pages-themes/cayman
 plugins:
   - jekyll-remote-theme
-
-markdown: kramdown
-theme: jekyll-theme-cayman
-plugins:
-  - jekyll-remote-theme
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
+
+# Markdown settings
+markdown: kramdown
